--- a/apt.html
+++ b/apt.html
@@ -96,7 +96,7 @@
         <section id="artwork" data-aos="fade-up">
             <article>
             <aside>
-                <img src="images/screenshots/apt-group.jpg">
+                <img src="images/screenshots/apt-group-wires.jpg">
             </aside>
 
             </article>
@@ -122,6 +122,34 @@
                       <p>The initial landing page drew visitors with robust graphics and engaging icons to highlight the facilities therapy process and services. 
                           CTA’s direct the user to relevant information points, services and inquiry forms to establish contact with the doctors and set appointments 
                           to expedite treatment.</p>
+</aside>
+</article>
+</section>
+
+<section id="artwork" data-aos="fade-up">
+    <article>
+    <aside>
+        <img src="images/screenshots/apt-group.jpg">
+    </aside>
+
+    </article>
+
+</section>
+
+<section id="project">
+               
+    <article data-aos="fade-up">
+        <aside>
+            <h3>Overview: </h3>
+        </aside>
+        <aside>
+            <p>Once commissioned for this project, I carefully and thoroughly investigated their industry and local competition. 
+                I quickly established a plan to accomplish the online success they were hoping to achieve. Through survey and client 
+                feedback, I established the majority of their patients preferred to access their website by desktop computer. Using 
+                their current branding, I prototyped a desktop-first interface that presented their services and content in an engaging, 
+                intuitive experience. The client required a CMS to administrate content in-house and we established that WordPress was 
+                the best option for them.</p>
+
 </aside>
 </article>
 </section>
@@ -152,6 +180,14 @@
 
 </aside>
 </article>
+
+    <!-- Pager -->
+    <div class="pager" data-aos="fade-up">
+    <a href="/"><i class="fas fa-chevron-left"></i></a>
+    <p>NEXT PROJECT</p>
+    <a href="esd.html"><i class="fas fa-chevron-right"></i></a>
+    </div>
+
 </section>
 
       </div>
