--- a/esd.html
+++ b/esd.html
@@ -96,12 +96,9 @@
         <section id="artwork">
 <article data-aos="fade-up">
 <aside>
-    <img src="images/screenshots/esd-wire-1.jpg">
+    <img src="images/screenshots/esd-group-wires.jpg">
 </aside>
-<aside>
-    <img src="images/screenshots/esd-wire-2.jpg">
 
-</aside>
 
 </article>
 
@@ -155,6 +152,13 @@
 </aside>
 </article>
 </section>
+
+    <!-- Pager -->
+    <div class="pager" data-aos="fade-up">
+        <a href="apt.html"><i class="fas fa-chevron-left"></i></a>
+        <p>NEXT PROJECT</p>
+        <a href="lhm.html"><i class="fas fa-chevron-right"></i></a>
+        </div>
 
       </div>
 
