--- a/lhm.html
+++ b/lhm.html
@@ -125,20 +125,6 @@
 </article>
 </section>
 
-        <section id="artwork" data-aos="fade-up">
-<article>
-<aside>
-    <img src="images/screenshots/apt-home-1.jpg">
-</aside>
-<aside>
-    <img src="images/screenshots/apt-interior-1.jpg">
-
-</aside>
-
-</article>
-
-        </section>
-
 <section id="mobile" data-aos="fade-up">
     <article>
 
@@ -166,6 +152,13 @@
 </aside>
 </article>
 </section>
+
+    <!-- Pager -->
+    <div class="pager" data-aos="fade-up">
+        <a href="esd.html"><i class="fas fa-chevron-left"></i></a>
+        <p>NEXT PROJECT</p>
+        <a href="esd.html"><i class="fas fa-chevron-right"></i></a>
+        </div>
 
       </div>
 
