--- a/portfolio.html
+++ b/portfolio.html
@@ -87,6 +87,21 @@
 
             <div class="item">
                 <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
+                <img src="images/portfolio/LHM-website,jpg" alt="Advantage Physical Therapy" width="539" height="443">
+            </a>
+            <div>
+                <h3>LHM Law Firm</h3>
+                <em>UI DESIGN / WORDPRESS</em>
+                <p>Advantage Physical Therapy  was aiming to upgrade an outdated website with a more aesthetically pleasing appearance, 
+                    implement a new SEO strategy to generate more leads and leverage a CMS to manage their own content. As the designer 
+                    and developer, I redesigned their website with a fresh-looking new responsive website to reflect the quality and level 
+                    of their expertise.</p>
+                    <a class="btn" href="lhm.html">Case Study</a>
+            </div>
+            </div>
+
+            <div class="item rt">
+                <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
                 <img src="images/portfolio/jennys-website.jpg" alt="Advantage Physical Therapy" width="539" height="443">
             </a>
             <div>
@@ -100,7 +115,7 @@
             </div>
             </div>
 
-            <div class="item rt">
+            <div class="item">
                 <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
                 <img src="images/portfolio/nd-app.jpg" alt="Advantage Physical Therapy" width="539" height="443">
             </a>
@@ -115,7 +130,7 @@
             </div>
             </div>
 
-            <div class="item">
+            <div class="item rt">
                 <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
                 <img src="images/portfolio/jsb-website.jpg" alt="Advantage Physical Therapy" width="539" height="443">
             </a>
@@ -130,7 +145,7 @@
             </div>
             </div>
 
-            <div class="item rt">
+            <div class="item">
                 <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
                 <img src="images/portfolio/bho-website.jpg" alt="Advantage Physical Therapy" width="539" height="443">
             </a>
@@ -145,7 +160,7 @@
             </div>
             </div>
 
-            <div class="item">
+            <div class="item rt">
                 <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
                 <img src="images/portfolio/amny-app.jpg" alt="Advantage Physical Therapy" width="539" height="443">
             </a>
@@ -159,22 +174,6 @@
                     <a class="btn" href="/">Case Study</a>
             </div>
             </div>
-
-            <div class="item rt">
-                <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
-                <img src="images/portfolio/LHM-website,jpg" alt="Advantage Physical Therapy" width="539" height="443">
-            </a>
-            <div>
-                <h3>LHM Law Firm</h3>
-                <em>UI DESIGN / WORDPRESS</em>
-                <p>Advantage Physical Therapy  was aiming to upgrade an outdated website with a more aesthetically pleasing appearance, 
-                    implement a new SEO strategy to generate more leads and leverage a CMS to manage their own content. As the designer 
-                    and developer, I redesigned their website with a fresh-looking new responsive website to reflect the quality and level 
-                    of their expertise.</p>
-                    <a class="btn" href="/">Case Study</a>
-            </div>
-            </div>
-
 
             <div class="item">
                 <a href="https://www.behance.net/gallery/100948821/Advantage-Physical-Therapy">
