--- a/about-me.html
+++ b/about-me.html
@@ -41,20 +41,21 @@
                     <p>For me, Interactive Design is about understanding people's needs.</p>
                     </div>
             <div class="flex" data-aos="fade-up" data-aos-duration="4000">
-                <img src="images/portrait/mh-placeholder.jpg"/>
+                <img src="images/portrait/mh-portrait.jpg"/>
                 <div class="bio">
-    <h3>Interactive design is about understanding people's needs.</h3>
+    <h3>Interactive design is all about understanding people's needs.</h3>
 
-   <p>I am a web designer, graphic artist, UI/UX designer. I was born and raised on Long Island NY but I am currently living in Laguna Niguel CA. I am a designer and developer for <a href="https://electricbricks.net/">Electric Bricks</a>, a NY-based media agency. I have a knack for designing to solve problems and creating intuitive, robust interfaces. It starts with what the client is trying to convey and what the users needs to interpret that information.  </p>
+   <p>I am a web designer, graphic artist, UI/UX designer. I was born and raised on Long Island NY but I am currently living in Laguna Niguel CA. I am a designer and developer for <a href="https://electricbricks.net/">Electric Bricks</a>, a NY-based media agency. I have a knack for designing to solve problems and creating intuitive, robust interfaces. It starts with what the client is trying to convey and how the user needs to interpret that information.  </p>
     
     <p>Previously, I’ve had the opportunity to work as a Senior Designer at<a href="http:newsday.com">Newsday LLC</a>, as well as several other agencies from small boutique sized companies to large firms. </p>
 
     <a class="btn" href="resume.pdf">Resumè</a>
 
     <div class="social-media">
-     <a href="/"><i class="fab fa-linkedin"></i></a>
-     <a href="/"><i class="fab fa-behance"></i></a>
-        <a href="/"><i class="fab fa-instagram-square"></i></a>
+     <a href="https://www.linkedin.com/in/matthogeboom/"><i class="fab fa-linkedin"></i></a>
+     <a href="https://www.linkedin.com/in/matthogeboom/"><i class="fab fa-instagram-square"></i></a>
+     <a href="https://www.behance.net/matthewhog56fa"><i class="fab fa-behance"></i></a>
+     
     </div>
 
 </div>
@@ -66,14 +67,15 @@
         <footer id="contact">
             <div class="inner">
                 <a class="logo" href="/">
-                    <img src="images/svg/logo-mph-footer.svg">
+                    <img src="images/logos/logo-mph.svg" class="logo">
                 </a>
-                <div class="social-media">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-instagram-square"></i>
-                <i class="fab fa-behance"></i>
-            </div>
                 <div class="contact-info">
+
+            <div class="social-media">
+                <a href="https://www.linkedin.com/in/matthogeboom/"><i class="fab fa-linkedin"></i></a>
+                <a href="/"><i class="fab fa-instagram-square"></i></a> 
+                <a href="https://www.behance.net/matthewhog56fa"><i class="fab fa-behance"></i></a>
+            </div>
                 <a href="mailto:matthewhogeboom@gmail.com"><i class="fas fa-paper-plane"></i> matthewhogeboom@gmail.com</a>
                 <p><i class="fas fa-phone-volume"></i> (949) 542-9693</p>
                 </div>
