--- a/index.html
+++ b/index.html
@@ -42,8 +42,24 @@
                     <p>I am a senior designer who loves creating interfaces.</p>
                     </div>
             <div class="grid" data-aos="fade-up" data-aos-duration="4000">
-                <div><img src="images/thm/thm-bho-new.jpg"></div>
-                <div><img src="images/thm/osl-landing-page.jpg"></div>
+                <div class="container">
+                  <a href="/">
+                    <img src="images/thm/thm-bho-new.jpg" class="image">
+                    <div class="overlay">
+                        <div class="text">
+                            <h3>Brookhaven Opticians Website Redesign</h3>
+                        </div>
+                      </div>
+                </a>  
+                </div>
+                <div class="container">
+                    <img src="images/thm/osl-landing-page.jpg">
+                    <div class="overlay">
+                        <div class="text">
+                            <h3>Oceanside Library Website Redesign</h3>
+                        </div>
+                      </div>
+                </div>
                 <div><img src="images/thm/thm-spl.jpg"></div>
                 <div><img src="images/thm/thm-ttl.jpg"></div>
                 <div><img src="images/thm/newsday-mobile-app.jpg"></div>
@@ -56,23 +72,24 @@
 
       </div>
 
-        <footer id="contact">
-            <div class="inner">
-                <a class="logo" href="/">
-                    <img src="images/svg/logo-mph-footer.svg">
-                </a>
+      <footer id="contact">
+        <div class="inner">
+            <a class="logo" href="/">
+                <img src="images/logos/logo-mph.svg" class="logo">
+            </a>
+            <div class="contact-info">
+
                 <div class="social-media">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-instagram-square"></i>
-                <i class="fab fa-behance"></i>
-            </div>
-                <div class="contact-info">
-                <a href="mailto:matthewhogeboom@gmail.com"><i class="fas fa-paper-plane"></i> matthewhogeboom@gmail.com</a>
-                <p><i class="fas fa-phone-volume"></i> (949) 542-9693</p>
+                    <a href="https://www.linkedin.com/in/matthogeboom/"><i class="fab fa-linkedin"></i></a>
+                   <a href="/"><i class="fab fa-instagram-square"></i></a> 
+                    <a href="https://www.behance.net/matthewhog56fa"><i class="fab fa-behance"></i></a>
                 </div>
+            <a href="mailto:matthewhogeboom@gmail.com"><i class="fas fa-paper-plane"></i> matthewhogeboom@gmail.com</a>
+            <p><i class="fas fa-phone-volume"></i> (949) 542-9693</p>
             </div>
-            </div>
-        </footer>
+        </div>
+        </div>
+    </footer>
     </div>
     <script>
         AOS.init({
