--- a/about-me.html
+++ b/about-me.html
@@ -17,22 +17,24 @@
 </head>
 <body>
     <div id="wrapper" class="work">
-            <header data-aos="fade" data-aos-duration="4000">
-                <div class="inner">
-                    <a class="logo" href="/">
-                       <img src="images/logos/logo-mph.svg" class="logo" width="91" height="112"/>
-                    </a>
-                    <nav>
-                        <a href="about-me.html"  class="active">
-                            <span>ABOUT ME</span>
-                        </a> 
-                        <a href="index.html">
-                        <span>MY WORK</span>
-                    </a> 
-
-                    </nav>
+        <header data-aos="fade" data-aos-duration="4000">
+            <div class="inner">
+                <a class="logo" href="/">
+                    <img src="images/logos/logo-mph.svg" class="logo" width="91" height="112"/>
+                </a>
+                <div class="topnav" id="myTopnav">
+                    <div class="wrapper">
+                    <a href="index.html" class="active">Work</a>
+                    <a href="about-me.html">About</a>
                 </div>
-            </header>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                      <i class="fa fa-bars"></i>
+                    </a>
+                
+                  </div>
+                
+            </div>
+        </header>
 
         <div id="content">
             <section id="about">
@@ -94,6 +96,7 @@
              <script src="https://kit.fontawesome.com/859c3b0e27.js" crossorigin="anonymous"></script>
              <script src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
              <script src="https://unpkg.com/smoothscroll-anchor-polyfill"></script>
+             <script src="js/ani-scroll.js"></script>
 
 </body>
 </html>
