--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     </a>
                     <div class="topnav" id="myTopnav">
                         <div class="wrapper">
-                        <a href="#home" class="active">Work</a>
-                        <a href="#about">About</a>
+                        <a href="index.html" class="active">Work</a>
+                        <a href="about-me.html">About</a>
                     </div>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                           <i class="fa fa-bars"></i>
