--- a/about-me.html
+++ b/about-me.html
@@ -24,8 +24,8 @@
                 </a>
                 <div class="topnav" id="myTopnav">
                     <div class="wrapper">
-                    <a href="index.html" class="active">Work</a>
-                    <a href="about-me.html">About</a>
+                    <a href="index.html">Work</a>
+                    <a href="about-me.html" class="active">About</a>
                 </div>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                       <i class="fa fa-bars"></i>
@@ -39,7 +39,7 @@
         <div id="content">
             <section id="about">
                     <div class="title" data-aos="fade" data-aos-duration="4000">
-                    <h1>A little about me</h1>
+                    <h1>A little <span>about me</span></h1>
                     <p>For me, Interactive Design is about understanding people's needs.</p>
                     </div>
             <div class="flex" data-aos="fade-up" data-aos-duration="4000">
@@ -49,16 +49,9 @@
 
    <p>I am a web designer, graphic artist, UI/UX designer. I was born and raised on Long Island NY but I am currently living in Laguna Niguel CA. I am a designer and developer for <a href="https://electricbricks.net/">Electric Bricks</a>, a NY-based media agency. I have a knack for designing to solve problems and creating intuitive, robust interfaces. It starts with what the client is trying to convey and how the user needs to interpret that information.  </p>
     
-    <p>Previously, I’ve had the opportunity to work as a Senior Designer at<a href="http:newsday.com">Newsday LLC</a>, as well as several other agencies from small boutique sized companies to large firms. </p>
+    <p>Previously, I’ve had the opportunity to work as a Senior Designer at <a href="http:newsday.com">Newsday LLC</a>, as well as several other agencies from small boutique sized companies to large firms. </p>
 
     <a class="btn" href="resume.pdf">Resumè</a>
-
-    <div class="social-media">
-     <a href="https://www.linkedin.com/in/matthogeboom/"><i class="fab fa-linkedin"></i></a>
-     <a href="https://www.linkedin.com/in/matthogeboom/"><i class="fab fa-instagram-square"></i></a>
-     <a href="https://www.behance.net/matthewhog56fa"><i class="fab fa-behance"></i></a>
-     
-    </div>
 
 </div>
             </div>
@@ -68,7 +61,7 @@
 
         <footer id="contact">
             <div class="inner">
-                <a class="logo" href="/">
+                <a href="/">
                     <img src="images/logos/logo-mph.svg" class="logo">
                 </a>
                 <div class="contact-info">
