--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div id="content">
             <section id="work">
                     <div class="title" data-aos="fade" data-aos-duration="4000">
-                    <h1>Hello there, I’m Matt! 
+                    <h1>Hello, I’m Matt! 
                         I’m a <span>Visual Designer</span></h1>
                     <p>I am a senior designer who loves creating interfaces.</p>
                     </div>
@@ -114,7 +114,7 @@
 
       <footer id="contact">
         <div class="inner">
-            <a class="logo" href="/">
+            <a href="/">
                 <img src="images/logos/logo-mph.svg" class="logo">
             </a>
             <div class="contact-info">
