--- a/bho.html
+++ b/bho.html
@@ -39,15 +39,13 @@
             <article class="container">
                 <aside>
                 <small>HEALTH & MEDICINE</small>
-            <h1>Advantage Physical Therapy</h1>
+            <h1>Brookhaven Opticians</h1>
        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt 
            ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo 
            dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est.</p>
         </aside>
-        <img src="images/hero-images/hero-apt.jpg"/>
-        <aside>
+        <img src="images/hero-images/hero-bho.png"/>
 
-        </aside>
                 </article>
         </section>
         <div id="content">
@@ -84,6 +82,34 @@
                 </div>
 
             </article>
+            </section>
+            <section id="case-study">
+
+
+            <article class="container">
+                <aside>
+                    <h3>Critical issues with original website: </h3>
+               
+                    <p>Not only was the old site badly outdated in terms of design. Content was outdated and poorly structured. Lack of an SEO strategy left the 
+                     wesbsite with no visibility in ranking.
+                    </p>
+                    <ul>
+                        <li><i class="fas fa-check"></i> Navigation is confusing and poorly structured.</li>
+                        <li><i class="fas fa-check"></i> Branding is overly dominant and takes up too much space.</li>
+                        <li><i class="fas fa-check"></i> Home page has no useful content or CTA's.</li>
+                        <li><i class="fas fa-check"></i> Sign ups and scheduling too diffucult to locate.</li>
+                        <li><i class="fas fa-check"></i> Footer is cluttered and diffucult to read.</li>
+                        <li><i class="fas fa-check"></i> Interior content is sparely populated and outdated.</li>
+                        <li><i class="fas fa-check"></i> Poor SEO with no keywording.</li>
+
+
+
+                    </ul>
+                </aside>
+
+                <img src="images/screenshots//bho-beforejpg">
+
+        </article>
 
         </section>
 
