--- a/project.html
+++ b/project.html
@@ -6,6 +6,8 @@
     <title>Matt / Hogeboom - Front-End Web Developer</title>
     <meta name="description" content="I design and build websites and applications for viewing on a television, desktop, tablet or mobile device">
     <meta name="robots" content="noindex,nofollow" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="<link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="css/global.css" rel="stylesheet" type="text/css" />
     <!-- <script type="text/javascript" src="js/ani-scroll.js"></script> -->
@@ -36,76 +38,24 @@
 
         <div id="content">
             <section id="work">
-                    <div class="title" data-aos="fade" data-aos-duration="4000">
-                    <h1>Hello, I’m Matt! 
-                        I’m a <span>Visual Designer</span></h1>
-                    <p>I am a senior designer who loves creating interfaces.</p>
-                    </div>
-            <div class="grid" data-aos="fade-up" data-aos-duration="4000">
-                <div class="container">
-                  <a href="bho.html">
-                    <img src="images/thm/thm-bho-new.jpg" class="image">
-                    <div class="overlay">
-                        <div class="text">
-                            <h3>Brookhaven Opticians Website Redesign</h3>
-                        </div>
-                      </div>
-                </a>  
-                </div>
-                <div class="container">
-                    <a href="/">
-
-                    <img src="images/thm/osl-landing-page.jpg">
-                    <div class="overlay">
-                        <div class="text">
-                            <h3>Oceanside Library Website Redesign</h3>
-                        </div>
-                      </div>
-                      </a>
-                </div>
-                <div class="container">
-                    <a href="/">
-                    <img src="images/thm/thm-spl.jpg">
-                    <div class="overlay">
-                        <div class="text">
-                            <h3>Sidrane, Parsons Law</h3>
-                        </div>
-                      </div>
-                    </a>
-                </div>
-                <div class="container">
-                    <a href="apt.html">
-                    <img src="images/thm/apt-home-page.jpg">
-                    <div class="overlay">
-                        <div class="text">
-                            <h3>Advantage Physical Therapy</h3>
-                        </div>
-                      </div>
-                    </a>
-                    </div>
-                    <div class="container">
-                        <a href="/">
-                    <img src="images/thm/newsday-mobile-app.jpg">
-                    <div class="overlay">
-                        <div class="text">
-                            <h3>Newsday App</h3>
-                        </div>
-                      </div>
-                    </a>
-                </div>
-                <div class="container">
-                    <a href="/">
-
-                    <img src="images/thm/thm-myc.jpg">
-                <div class="overlay">
-                    <div class="text">
-                        <h3>Moriches Yacht Club</h3>
-                    </div>
-                  </div>
-                </a>
-    </div>
-
-            </div>
+                <article data-aos="fade-up">
+                    <aside>
+                        <h3>Objectives: </h3>
+                    </aside>
+                    <aside>
+                        <p>Advantage Physical Therapy  approached me with a very simple, typical 1.0 website. A simple outdated design style. Disorganized content and an 
+                        unstructured and confusing user flow. A lack of SEO strategy left them behind by their competition and deprived them of traffic. DJ, the owner,
+                        was looking to rebuild the website with some basic needs in mind:</p>
+    
+                        <ul class="fa-ul">
+                            <li><i class="fa-li fas fa-check fa-fw"></i> Improve overall aesthetic and user experience to make the site more engaging and to drive trust and credibility.</li>
+                            <li><i class="fa-li fas fa-check"></i> Provide vital relevant information and for website visitors and capture leads via email signup and appointment request forms.</li>
+                            <li><i class="fa-li fas fa-check"></i> Provide information about the staff, facility and therapy services. Expedite the patient registration process with downloadable insurance forms</li>
+                            <li><i class="fa-li fas fa-check"></i> Create an SEO strategy to gain new business and compete with the substantial local competition.</li>
+                            <li><i class="fa-li fas fa-check"></i> Build a CMS simple enough for them to update and maintain basic content.</li>
+                        </ul>
+                    </aside>
+                </article>
             </section>
 
       </div>
