--- a/esd.html
+++ b/esd.html
@@ -191,7 +191,7 @@
              <script src="https://kit.fontawesome.com/859c3b0e27.js" crossorigin="anonymous"></script>
              <script src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
              <script src="https://unpkg.com/smoothscroll-anchor-polyfill"></script>
-
+             <script src="js/ani-scroll.js"></script>
 </body>
 </html>
 
