--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
                     </div>
             <div class="grid" data-aos="fade-up" data-aos-duration="4000">
                 <div class="container">
+                    <a href="apt.html">
+                    <img src="images/thm/apt-home-page.jpg">
+                    <div class="overlay">
+                        <div class="text">
+                            <h3>Advantage Physical Therapy</h3>
+                        </div>
+                      </div>
+                    </a>
+                    </div>
+                <div class="container">
                   <a href="bho.html">
                     <img src="images/thm/thm-bho-new.jpg" class="image">
                     <div class="overlay">
@@ -52,6 +62,17 @@
                       </div>
                 </a>  
                 </div>
+                <div class="container">
+                    <a href="myc.html">
+
+                    <img src="images/thm/thm-myc.jpg">
+                <div class="overlay">
+                    <div class="text">
+                        <h3>Moriches Yacht Club</h3>
+                    </div>
+                  </div>
+                </a>
+    </div>
                 <div class="container">
                     <a href="/">
 
@@ -73,16 +94,7 @@
                       </div>
                     </a>
                 </div>
-                <div class="container">
-                    <a href="apt.html">
-                    <img src="images/thm/apt-home-page.jpg">
-                    <div class="overlay">
-                        <div class="text">
-                            <h3>Advantage Physical Therapy</h3>
-                        </div>
-                      </div>
-                    </a>
-                    </div>
+
                     <div class="container">
                         <a href="/">
                     <img src="images/thm/newsday-mobile-app.jpg">
@@ -93,17 +105,7 @@
                       </div>
                     </a>
                 </div>
-                <div class="container">
-                    <a href="/">
 
-                    <img src="images/thm/thm-myc.jpg">
-                <div class="overlay">
-                    <div class="text">
-                        <h3>Moriches Yacht Club</h3>
-                    </div>
-                  </div>
-                </a>
-    </div>
 
             </div>
             </section>
