12-3 - Case study additions

--- a/bho.html
+++ b/bho.html
@@ -84,7 +84,7 @@
             </article>
             </section>
 
-            <section id="case-study">
+            <section id="critical-issues">
             <article class="container">
                 <aside>
                     <h3>Critical issues with original website: </h3>
@@ -150,8 +150,8 @@
         <section id="style">
             <article data-aos="fade-up">
                 <h3>Style Guide: </h3>
+                <div class="container">
 
-             <div class="container">
             <aside>
                 <p>Color Pallette</p>
                 <img src="images/style/bho-colors.png">
@@ -164,7 +164,8 @@
                 <p>Fonts</p>
                 <img src="images/style/bho-fonts.png">
             </aside>
-            </div>
+            <div class="container">
+
             </article>
 
         </section>
