--- a/index.html
+++ b/index.html
@@ -73,9 +73,18 @@
                   </div>
                 </a>
     </div>
+    <div class="container">
+        <a href="nda.html">
+    <img src="images/thm/newsday-mobile-app.jpg">
+    <div class="overlay">
+        <div class="text">
+            <h3>Newsday App</h3>
+        </div>
+      </div>
+    </a>
+</div>
                 <div class="container">
                     <a href="/">
-
                     <img src="images/thm/osl-landing-page.jpg">
                     <div class="overlay">
                         <div class="text">
@@ -94,18 +103,6 @@
                       </div>
                     </a>
                 </div>
-
-                    <div class="container">
-                        <a href="/">
-                    <img src="images/thm/newsday-mobile-app.jpg">
-                    <div class="overlay">
-                        <div class="text">
-                            <h3>Newsday App</h3>
-                        </div>
-                      </div>
-                    </a>
-                </div>
-
 
             </div>
             </section>
