--- a/myc.html
+++ b/myc.html
@@ -141,7 +141,6 @@
             <article data-aos="fade-up">
                 <h3>Style Guide: </h3>
 
-             <div class="container">
             <aside>
                 <p>Color Pallette</p>
                 <img src="images/style/myc-colors.png">
@@ -154,7 +153,6 @@
                 <p>Fonts</p>
                 <img src="images/style/myc-fonts.png">
             </aside>
-        </div>
             </article>
 
         </section>
@@ -208,13 +206,13 @@
             <img src="images/mobile/myc-home.jpg"/>
             </aside>
             <aside>
-            <img src="images/mobile/bho-mobile-home-2.png"/>
+                <img src="images/mobile/myc-home-2.jpg"/>
             </aside>
             <aside>
-            <img src="images/mobile/bho-mobile-kids.png"/>
+            <img src="images/mobile/myc-home-3.jpg"/>
             </aside>
             <aside>
-            <img src="images/mobile/bho-mobile-shop.png"/>
+            <img src="images/mobile/myc-home-4.jpg"/>
             </aside>
     
         </article>
